fix: header background stretching

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -15,6 +15,13 @@
     background-color: rgba(0, 91, 193, 60%);
     z-index: 999;
 }
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    width: 1920px;
+}
 .header_logo{
     display: flex;
     justify-content: center;
